--- a/scss/general/_footer.scss
+++ b/scss/general/_footer.scss
@@ -8,8 +8,7 @@
     margin-bottom: 60px;
 
     &__link {
-        display: flex;
-        flex-direction: column;
+        @extend %flexColumn;
         gap: 20px;
         width: 100%;
     }
@@ -20,12 +19,10 @@
     }
 
     &__container-social {
-        display: flex;
-        flex-direction: column;
+        @extend %flexColumn;
+        @include wh(100%, 100%);
         gap: 10px;
         padding: 30px 20px;
-        height: 100%;
-        width: 100%;
     }
 
     &__label {
@@ -47,13 +44,11 @@
     }
 
     &__container-numbers {
-        display: flex;
-        flex-direction: column;
+        @extend %flexColumn;
+        @include wh(100%, 100%);
         color: $gray;
         padding: 30px 20px;
         gap: 10px;
-        height: 100%;
-        width: 100%;
     }
 }
 
