--- a/scss/general/index.scss
+++ b/scss/general/index.scss
@@ -1,5 +1,5 @@
 @import '_reset.scss';
-@import '_fonts.scss';
+@import './_fonts.scss';
 @import '_variables.scss';
 @import '_general.scss';
 @import '_nav-bar.scss';
