--- a/scss/main-page/_main-page.scss
+++ b/scss/main-page/_main-page.scss
@@ -2,16 +2,13 @@
 
 
 .main {
-    display: flex;
-    flex-direction: column;
+    @extend %flexColumn;
     gap: 30px;
     margin: 0 110px;
 
     &__title {
-        display: flex;
+        @extend %flexCenter;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
         margin-top: 30px;
         gap: 10px;
     }
@@ -36,10 +33,8 @@
     }
 
     &__products {
-        display: flex;
+        @extend %flexCenter;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         gap: 30px;
     }
 
@@ -69,8 +64,7 @@
           }
 
     &__card {
-        display: flex;
-        flex-direction: column;
+        @extend %flexColumn;
         max-width: 290px;
         justify-content: space-between;
         gap: 20px;
@@ -110,8 +104,7 @@
     }
 
     &__description {
-        display: flex;
-        flex-direction: column;
+        @extend %flexColumn;
         gap: 10px;
         margin: 50px 0 60px;
     }
