--- a/style/basket/basket.css
+++ b/style/basket/basket.css
@@ -115,52 +115,58 @@ legend {
 @font-face {
   font-family: "DIN Pro";
   src: url("../../fonts/dinpro-medium.eot");
-  src: local("DIN Pro Medium"), local("DINPro-Medium"), url("../../fonts/DINPro-Medium.eot?#iefix") format("embedded-opentype"), url("../../fonts/DINPro-Medium.woff") format("woff"), url("../../fonts/DINPro-Medium.ttf") format("truetype");
+  src: local("DIN Pro Medium"), local("DINPro-Medium"), url("../../fonts/dinpro-medium.eot?#iefix") format("embedded-opentype"), url("../../fonts/dinpro-medium.woff") format("woff"), url("../../fonts/dinpro-medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "DIN Pro";
-  src: url("../../fonts/DINPro-Bold.eot");
-  src: local("DIN Pro Bold"), local("DINPro-Bold"), url("../../fonts/DINPro-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/DINPro-Bold.woff") format("woff"), url("../../fonts/DINPro-Bold.ttf") format("truetype");
+  src: url("../../fonts/dinpro-bold.eot");
+  src: local("DIN Pro Bold"), local("DINPro-Bold"), url("../../fonts/dinpro-bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/dinpro-bold.woff") format("woff"), url("../../fonts/dinpro-bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
   font-family: "DIN Pro";
-  src: url("../../fonts/DINPro-Light.eot");
-  src: local("DIN Pro Light"), local("DINPro-Light"), url("../../fonts/DINPro-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/DINPro-Light.woff") format("woff"), url("../../fonts/DINPro-Light.ttf") format("truetype");
+  src: url("../../fonts/dinpro-light.eot");
+  src: local("DIN Pro Light"), local("DINPro-Light"), url("../../fonts/dinpro-light.eot?#iefix") format("embedded-opentype"), url("../../fonts/dinpro-light.woff") format("woff"), url("../../fonts/dinpro-light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "DIN Pro";
-  src: url("../../fonts/DINPro.eot");
-  src: local("DIN Pro"), local("DINPro"), url("../../fonts/DINPro.eot?#iefix") format("embedded-opentype"), url("../../fonts/DINPro.woff") format("woff"), url("../../fonts/DINPro.ttf") format("truetype");
+  src: url("../../fonts/dinpro.eot");
+  src: local("DIN Pro"), local("DINPro"), url("../../fonts/dinpro.eot?#iefix") format("embedded-opentype"), url("../../fonts/dinpro.woff") format("woff"), url("../../fonts/dinpro.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-.wrapper {
-  font-family: "DIN Pro", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
+.form__button, .form__item-radio, .aside__address, .aside__promotion-link {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.form__fields-container, .form, .footer__container-numbers, .footer__container-social, .footer__link, .aside, .header__location, .header__contacts, .navigation__logo-container, .navigation {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
   width: 100%;
   height: 100%;
+  font-family: "DIN Pro", sans-serif;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 1720px;
 }
 
 .navigation {
-  display: flex;
-  flex-direction: column;
   width: 180px;
   height: 100%;
   margin-right: 40px;
 }
 .navigation__logo-container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   border-bottom: 1px solid #A4ACAD;
   padding: 30px;
@@ -188,6 +194,11 @@ legend {
   color: #FF9846;
 }
 
+@media (max-width: 390px) {
+  .navigation {
+    display: none;
+  }
+}
 .container {
   background-color: #F2F2F2;
 }
@@ -196,10 +207,10 @@ legend {
   display: flex;
   border-bottom: 0.5px solid #A4ACAD;
 }
+.header__logo {
+  display: none;
+}
 .header__contacts {
-  display: flex;
-  flex-direction: column;
-  width: 220px;
   padding: 6px 14px 8px;
   text-align: center;
   border-right: 0.5px solid #A4ACAD;
@@ -216,25 +227,24 @@ legend {
   line-height: 18px;
 }
 .header__work-time {
-  display: flex;
-  margin-top: 5px;
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
+  display: flex;
+  margin-top: 5px;
   color: #A4ACAD;
 }
 .header__work-icon {
   margin-right: 4px;
+  align-self: flex-start;
 }
 .header__nav {
-  width: 950px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .header__location {
-  display: flex;
-  flex-direction: column;
   margin-left: 14px;
 }
 .header__city-label {
@@ -254,11 +264,11 @@ legend {
   gap: 70px;
 }
 .header__nav-link {
-  display: flex;
-  gap: 10px;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
+  display: flex;
+  gap: 10px;
 }
 .header__link-item {
   color: #000000;
@@ -270,9 +280,25 @@ legend {
   padding: 35px 40px 30px;
 }
 
+@media (max-width: 390px) {
+  .header {
+    justify-content: center;
+    padding: 10px 26px;
+  }
+  .header__contacts {
+    border: none;
+  }
+  .header__button {
+    display: none;
+  }
+  .header__logo {
+    display: block;
+  }
+  .header__nav {
+    display: none;
+  }
+}
 .aside {
-  display: flex;
-  flex-direction: column;
   gap: 20px;
   width: 290px;
   margin: 55px 0 20px 40px;
@@ -294,20 +320,17 @@ legend {
   line-height: 22px;
   color: #A4ACAD;
 }
-.aside__promotion {
+.aside__promotion-link {
   width: 290px;
   height: 40px;
-  color: #F2F2F2;
   background-color: #FF9846;
+  color: #F2F2F2;
   border-radius: 0 0 5px 5px;
   margin-top: 26px;
 }
 .aside__address {
   position: relative;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 10px;
   background-color: #F2F2F2;
 }
@@ -331,6 +354,11 @@ legend {
   margin-bottom: 10px;
 }
 
+@media (max-width: 390px) {
+  .aside {
+    display: none;
+  }
+}
 .footer {
   display: flex;
   align-items: center;
@@ -338,13 +366,11 @@ legend {
   background-color: #F2F2F2;
   padding: 0 110px;
   border-top: 0.5px solid #A4ACAD;
-  height: 270px;
   margin-bottom: 60px;
 }
 .footer__link {
-  display: flex;
-  flex-direction: column;
   gap: 20px;
+  width: 100%;
 }
 .footer__item {
   font-size: 18px;
@@ -353,13 +379,10 @@ legend {
   color: #000000;
 }
 .footer__container-social {
-  display: flex;
-  flex-direction: column;
-  border-left: 0.5px solid #A4ACAD;
+  width: 100%;
+  height: 100%;
   gap: 10px;
   padding: 30px 20px;
-  height: 100%;
-  width: 330px;
 }
 .footer__label {
   font-size: 18px;
@@ -377,18 +400,29 @@ legend {
   color: #A4ACAD;
 }
 .footer__social-link {
-  padding: 20px;
+  padding: 6px;
 }
 .footer__container-numbers {
-  display: flex;
-  flex-direction: column;
-  color: #A4ACAD;
-  border-left: 0.5px solid #A4ACAD;
-  padding: 30px 40px;
-  gap: 10px;
+  width: 100%;
   height: 100%;
+  color: #A4ACAD;
+  padding: 30px 20px;
+  gap: 10px;
 }
 
+@media (max-width: 390px) {
+  .footer {
+    flex-direction: column;
+    padding: 20px 30px;
+    gap: 40px;
+  }
+  .footer__container-social {
+    padding: 0;
+  }
+  .footer__container-numbers {
+    padding: 30px 0;
+  }
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -407,8 +441,6 @@ legend {
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   gap: 40px;
   padding: 56px;
@@ -428,8 +460,6 @@ legend {
   width: 100%;
 }
 .form__fields-container {
-  display: flex;
-  flex-direction: column;
   gap: 30px;
   width: 100%;
 }
@@ -454,9 +484,6 @@ legend {
   overflow: hidden;
 }
 .form__item-radio {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 12px;
   background-color: #FFFFFF;
   padding: 10px 26px;
@@ -481,11 +508,8 @@ legend {
   gap: 10px;
 }
 .form__button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 20px;
   width: 20px;
+  height: 20px;
 }
 .form__button:first-child .form__button-icon {
   width: 14px;
@@ -497,25 +521,16 @@ legend {
 }
 .form__button-checkout {
   width: 100%;
-  background-color: #F46D40;
-  color: #FFFFFF;
   height: 46px;
-  border-radius: 5px;
   font-size: 18px;
   font-weight: 500;
   line-height: 22px;
+  background-color: #F46D40;
+  color: #FFFFFF;
+  border-radius: 5px;
 }
 
 @media (max-width: 390px) {
-  .header {
-    padding: 10px 26px;
-  }
-  .header__button {
-    display: none;
-  }
-  .header__logo {
-    display: block;
-  }
   .aside,
 .navigation {
     display: none;
